2005-10-12  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (top): Try to simplify XEmacs byte-compiler
	pacification.
	(tramp-verbose): Finish doc string.  New default value is 3.
	(all): Apply new verbosity levels.
	(tramp-get-debug-buffer): Remove definition of outline faces.  The
	default values are good enough.
	(tramp-bug): Explain setting of `tramp-verbose'.

	* tramp-cache.el (all): Apply new verbosity levels.

	* tramp-smb.el (top): Try to simplify XEmacs byte-compiler
	pacification.
	(all): Apply new verbosity levels.

	* tramp-vc.el (top): Try to simplify XEmacs byte-compiler
	pacification.

2005-10-11  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-verbose): Start rewriting the doc string.  Not
	finished yet.
	(tramp-handle-delete-file, tramp-handle-insert-file-contents)
	(tramp-sh-file-name-handler): Signals expect a list as last
	parameter.
	(tramp-file-name-handler): Handle signals in order to trace them
	in the debug buffer.

	* tramp-smb.el (tramp-smb-handle-directory-files): Rewritten in
	order to profit from caching results.
	(tramp-smb-handle-file-name-all-completions): `localname' must be
	expanded by `file-name-as-directory'.

2005-10-11  Steve Youngs  <steve@sxemacs.org>

	* tramp.el: Require `timer-funcs' instead of `timer' if in
	XEmacs.

2005-10-10  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-delete-directory)
	(tramp-handle-dired-recursive-delete-directory): Apply
	`tramp-cache-flush-directory'.
	(tramp-handle-insert-directory): Apply `tramp-cache-flush-file'.

	* tramp-cache.el: Autoload the needed functions from tramp.el.
	(tramp-cache-flush-directory, tramp-cache-before-revert-function):
	New defuns.
	(top): Add `tramp-cache-before-revert-function' to
	`before-revert-hook'.  Deactivate all Tramp messages for
	performance reasons.

	* tramp-smb.el (tramp-smb-handle-delete-directory): Apply
	`tramp-cache-flush-directory'.
	(tramp-smb-handle-insert-directory): Apply
	`tramp-cache-flush-file'.