@@ -1,3 +1,13 @@
+2005-10-13  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-debug-message, tramp-message-for-buffer): Write
+	message only if connection buffer exists.  Otherwise, method, user
+	and host are not set yet.
+	(tramp-handle-directory-files-and-attributes-with-perl)
+	(tramp-handle-directory-files-and-attributes-with-stat): New
+	defuns.
+	(tramp-handle-directory-files-and-attributes): Use them.
+
 2005-10-12  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (top): Try to simplify XEmacs byte-compiler
